--- a/modded-content/tracks/index.css
+++ b/modded-content/tracks/index.css
@@ -37,7 +37,7 @@ body
     width: 100%;
     height: 100%;
     padding: 7px;
-    padding-bottom: 6px;
+    padding-bottom: 5px;
     border-radius: 2px;
     background-color: transparent;
     border: 1px dashed black;
@@ -69,7 +69,8 @@ body
     color: rgb(194, 122, 27);
     border-radius: 0px 10px 10px 0px;
     padding: 7px;
-    padding-right: 10px;
+    padding-right: 11px;
+    padding-left: 11px;
     font-size: 70%;
     margin: 2px;
     margin-left: -5px;
@@ -88,7 +89,7 @@ body
     font-family: 'Quicksand', sans-serif;
     white-space: nowrap;
     color: rgb(185, 115, 24);
-    background-color: rgb(48, 48, 48);
+    background-color: rgb(44, 44, 44);
     padding: 8px;
     padding-left: 15px;
     padding-right: 15px;
@@ -105,7 +106,7 @@ body
 {
     font-family: 'Quicksand', sans-serif;
     font-size: 85%;
-    color: rgb(29, 17, 2);
+    color: rgb(14, 14, 14);
     transform: rotate(-1deg);
-    margin-top: 11px;
+    margin-top: 12px;
 }
